forth/test/fail/test_catch_requires_try_all.af
fun: test_catch_requires_try_all_inner { -- err } " test_err" end

\ Must fail to compile: ".catch" requires implicit ".try".
fun: test_catch_requires_try_all_outer
  .test_catch_requires_try_all_inner .catch
end
